--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -5,6 +5,7 @@
   src="https://code.jquery.com/jquery-1.12.4.min.js"
   integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
   crossorigin="anonymous"></script>
+  <script src= "/assets/todo-list.js"></script>
   <link href='/assets/styles.css' rel='stylesheet' type='text/css' />
 </head>
 <body>
